# Ai-Repo-Analyser

./: README.md  config.py  main.py  pyproject.toml
scripts/: warm_cache.py
src/agents/: chat_summary_agent.py  code_agent.py  dependency_agent.py  diagram_agent.py  docs_agent.py  memory_extraction_agent.py  refactor_agent.py  router_agent.py  security_agent.py  summary_agent.py  test_agent.py
src/controller/: auth_controller.py  chat_controller.py  github_controller.py
src/database/: index.py  vector.py
src/middleware/: auth_middleware.py
src/models/: auth_model.py  chat_model.py  repo_model.py  report_model.py
src/pipeline/: orchestrator.py
src/rag/: chunk_rag.py  embeddings_rag.py  read.rag.py  read_rag.py  retriever.py  vector_rag.py
src/routes/: auth_route.py  chat_route.py  github_route.py
src/utils/: hashing.py  jwt.py
